fixtures/frontend/milestone-1/invalid/markup_mismatched_close.aivi
val brokenView =
    <show when={True}>
        <Label text="Ready" />
    </each>
